syntax = "proto3";

option csharp_namespace = "Api";

package resource;

// The resource service definition.
service Resources {
  rpc GetResources (GetResourcesRequest) returns (GetResourcesReply);
}

message GetResourcesRequest {
  string id = 1;
  int32 skip = 2;
  int32 take = 3;
  string search = 4;
  string sortField = 5;
  int32 sortOrder = 6;
}

message GetResourcesReply {
  repeated Resource resources = 1;
  int32 total = 2;
}

message Resource {
	string id = 1;
}
