syntax = "proto3";

option csharp_namespace = "Api";

package resource_group;

// The resource service definition.
service ResourceGroups {
  rpc GetResourceGroups (GetResourceGroupsRequest) returns (GetResourceGroupsReply);
  rpc GetResourceGroup (GetResourceGroupRequest) returns (GetResourceGroupReply);
}

message GetResourceGroupsRequest {
  int32 skip = 1;
  int32 take = 2;
  string search = 3;
  string sortField = 4;
  int32 sortOrder = 5;
}

message GetResourceGroupsReply {
  repeated ResourceGroup groups = 1;
  int32 total = 2;
}

message GetResourceGroupRequest {
  string id = 1;
}

message GetResourceGroupReply {
  ResourceGroup group = 1;
}

message ResourceGroup {
	string id = 1;
	string name = 2;
	string location = 3;
}
